# mavis

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  spec_for_new_system.md
scripts/: render_scene.sh
src/mavis/: checks.py  constants.py  edits.py  globals.py  llm.py  mavis.py  prompts.py  render_scene.py  responses.py  schema.py  utils.py  vlm.py
src/mavis/prompts/: add_background.txt  check_object_preserved.txt  check_pose_edit_is_improvement.txt  generate_scene_params_system.txt  generate_scene_params_user.txt  generate_scene_setup_code_system.txt  generate_scene_setup_code_user.txt  generate_scene_specs_system.txt  generate_scene_specs_user.txt  modify_pose.txt
tests/mavis/: test_prompts.py  test_responses.py  test_schema.py
