[project]
name = "mavis"
version = "0.1.0"
description = "Multi-view Action-to-Visual Image Synthesis"
readme = "README.md"
requires-python = ">=3.11,<3.12" 
dependencies = [
    "bpy>=5.0.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

